force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/Negoptim__Orga_BU_List_Detail__c.object-meta.xml
<CustomObject>
    <description>List of BU ( Banner, cluster, stores, ecommerce, warehouses...) linked to an other BU</description>
    <label>Orga Business Unit List Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Code link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>