force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Ass_Clust__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ass_Clust__c</fullName>
    <label>Ass Clust</label>
    <length>6</length>
    <type>Text</type>
</CustomField>