force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__BU_Format__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__BU_Format__c</fullName>
    <formula>Negoptim__Entity_List__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU Format</label>
    <type>Text</type>
</CustomField>