force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Category__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Category__c</fullName>
    <formula>Negoptim__Entity_List__r.Negoptim__Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>