force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Format__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Format__c</fullName>
    <label>Format</label>
    <length>10</length>
    <type>Text</type>
</CustomField>