force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Linked_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Linked_Entity_Code__c</fullName>
    <formula>Negoptim__Entity_List__r.Negoptim__BU_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Entity Code</label>
    <type>Text</type>
</CustomField>