force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Linked_Entity_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Linked_Entity_Long_Name__c</fullName>
    <formula>Negoptim__Entity_List__r.Negoptim__Long_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Entity Long Name</label>
    <type>Text</type>
</CustomField>