force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Nielsen_Split__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Nielsen_Split__c</fullName>
    <label>Nielsen Split</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>