force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Reference_Year__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Reference_Year__c</fullName>
    <defaultValue>YEAR(TODAY())</defaultValue>
    <label>Reference Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>