force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Support_Date__c</fullName>
    <description>Last date for Support intervention on the row.</description>
    <inlineHelpText>Last date for Support intervention on the row.</inlineHelpText>
    <label>Last Support Date</label>
    <type>DateTime</type>
</CustomField>