force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__T_ass_cluster__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__T_ass_cluster__c</fullName>
    <formula>Text(Negoptim__Entity_List__r.Negoptim__Assortment_Strat__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T_ass_cluster</label>
    <type>Text</type>
</CustomField>