force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/fields/Negoptim__Weighted_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Weighted_Distribution__c</fullName>
    <label>Weighted Distribution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>