force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/recordTypes/Negoptim__Assortment_BU_link.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Assortment_BU_link</fullName>
    <active>true</active>
    <label>Assortment BU link</label>
</RecordType>