force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/recordTypes/Negoptim__Nego_BU_Link.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Nego_BU_Link</fullName>
    <active>true</active>
    <label>Nego BU Link</label>
</RecordType>