force-app/main/default/objects/Negoptim__Orga_BU_List_Detail__c/recordTypes/Negoptim__Store_KPI.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Store_KPI</fullName>
    <active>true</active>
    <label>Store KPI</label>
</RecordType>